<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_color"
    tools:context=".ForgetPasswordActivity">

    <TextView
        android:id="@+id/tv_reset_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/reset_password"
        android:textColor="@color/white"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ImageView
        android:layout_width="0dp"
        android:layout_height="300dp"
        android:src="@drawable/reset_password"
        app:layout_constraintTop_toBottomOf="@id/tv_reset_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        app:cardElevation="2dp"
        app:cardCornerRadius="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/bg_secondary_color">

            <!-- Enter Email -->

            <TextView
                android:id="@+id/tv_label_email"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:gravity="center"
                android:text="@string/please_enter_your_email"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_email"
                style="@style/InputStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:hint="@string/email"
                app:startIconDrawable="@drawable/ic_email"
                app:layout_constraintTop_toBottomOf="@id/tv_label_email"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tiet_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"/>

            </com.google.android.material.textfield.TextInputLayout>

            <android.widget.Button
                android:id="@+id/b_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginStart="16dp"
                android:text="@string/back"
                android:textStyle="bold"
                android:background="@drawable/bg_btn"
                app:layout_constraintTop_toBottomOf="@id/til_email"
                app:layout_constraintBottom_toTopOf="@id/gl_h_end"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/b_submit"
                app:layout_constraintHorizontal_chainStyle="spread_inside"/>

            <android.widget.Button
                android:id="@+id/b_submit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:text="@string/submit"
                android:textStyle="bold"
                android:background="@drawable/bg_btn"
                app:layout_constraintTop_toTopOf="@id/b_back"
                app:layout_constraintStart_toEndOf="@id/b_back"
                app:layout_constraintEnd_toEndOf="parent"/>

            <!-- Enter Code -->

            <TextView
                android:id="@+id/tv_label_code"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:gravity="center"
                android:text="@string/please_enter_the_code_sent_to_your_email"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                android:id="@+id/tv_label_email_id"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:gravity="center"
                android:text="@string/ex_gmail_com"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:layout_constraintTop_toBottomOf="@id/tv_label_code"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_code_1"
                style="@style/InputStyle"
                android:layout_width="64dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@id/tv_label_email_id"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/til_code_2">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tiet_code_1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:maxLength="1"
                    android:gravity="center"
                    android:inputType="number"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_code_2"
                style="@style/InputStyle"
                android:layout_width="64dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="@id/til_code_1"
                app:layout_constraintStart_toEndOf="@id/til_code_1"
                app:layout_constraintEnd_toStartOf="@id/til_code_3">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tiet_code_2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:maxLength="1"
                    android:gravity="center"
                    android:inputType="number"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_code_3"
                style="@style/InputStyle"
                android:layout_width="64dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="@id/til_code_2"
                app:layout_constraintStart_toEndOf="@id/til_code_2"
                app:layout_constraintEnd_toStartOf="@id/til_code_4">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tiet_code_3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:maxLength="1"
                    android:gravity="center"
                    android:inputType="number"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_code_4"
                style="@style/InputStyle"
                android:layout_width="64dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="@id/til_code_3"
                app:layout_constraintStart_toEndOf="@id/til_code_3"
                app:layout_constraintEnd_toEndOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tiet_code_4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:maxLength="1"
                    android:gravity="center"
                    android:inputType="number"/>

            </com.google.android.material.textfield.TextInputLayout>

            <android.widget.Button
                android:id="@+id/b_confirm_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/confirm"
                android:textStyle="bold"
                android:background="@drawable/bg_btn"
                app:layout_constraintTop_toBottomOf="@id/til_code_1"
                app:layout_constraintBottom_toTopOf="@id/gl_h_end"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <!-- Enter New Password -->

            <TextView
                android:id="@+id/tv_label_password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:gravity="center"
                android:text="@string/please_enter_your_new_password"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_password"
                style="@style/InputStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:hint="@string/password"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/bg_color"
                app:startIconDrawable="@drawable/password"
                app:layout_constraintTop_toBottomOf="@id/tv_label_password"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tiet_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_confirm_password"
                style="@style/InputStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:hint="@string/password"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/bg_color"
                app:startIconDrawable="@drawable/password"
                app:layout_constraintTop_toBottomOf="@id/til_password"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tiet_confirm_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"/>

            </com.google.android.material.textfield.TextInputLayout>

            <android.widget.Button
                android:id="@+id/b_confirm_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/confirm"
                android:textStyle="bold"
                android:background="@drawable/bg_btn"
                app:layout_constraintTop_toBottomOf="@id/til_confirm_password"
                app:layout_constraintBottom_toTopOf="@id/gl_h_end"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <androidx.constraintlayout.widget.Group
                android:id="@+id/g_enter_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="visible"
                app:constraint_referenced_ids="tv_label_email, til_email, b_back, b_submit"/>

            <androidx.constraintlayout.widget.Group
                android:id="@+id/g_enter_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:constraint_referenced_ids="tv_label_code, tv_label_email_id, til_code_1, til_code_2, til_code_3, til_code_4, b_confirm_code"/>

            <androidx.constraintlayout.widget.Group
                android:id="@+id/g_enter_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:constraint_referenced_ids="tv_label_password, til_password, til_confirm_password, b_confirm_password"/>

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/gl_h_end"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_end="16dp"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>